@@ -284,6 +284,17 @@
                         </div>
                       </div>
                     </div>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <div class="form-group">
+                          <label class="col-sm-4 control-label">{{form.spool_directory.label}}</label>
+                          <div class="col-sm-5">
+                            {{form.spool_directory}}
+                            {{form.spool_directory.errors|safe}}
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div> <!-- /.tab-disk -->
                 </div> <!-- /.tab-queue -->
               </div> <!-- /.advanced_options -->
